# pl-slam-compat

./: CMakeLists.txt  README.md  build.sh  build_master.sh
cmake_modules/: FindEigen3.cmake  FindG2O.cmake
depends/Pangolin/: build.sh
depends/eigen/: build.sh
depends/g2o/: build.sh
depends/mrpt/: build.sh
depends/opencv/: build.sh
depends/stvo-pl/: CMakeLists.txt  build.sh
depends/stvo-pl/src/: sceneRepresentation.cpp
src/: config.cpp  voScene.cpp
